--- a/main.html
+++ b/main.html
@@ -10,6 +10,10 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+		<h1>Why I want to become as developer?</h1>
+	<p>Solving problems which helps people in various fields has been one of major interests
+	since long time. In today's worlds it's not enough to just solve the problem but it also requires to scale it 
+	so that it reaches to maximum people and can be benifited. Developing software plays mojor role in this procedure and helps to to meet my passion </p>
 
 </body>
 
